--- a/TP1/Atelierexo3.css
+++ b/TP1/Atelierexo3.css
@@ -6,3 +6,44 @@ header h4{
     font-weight: normal;
    text-align: center;
 }
+.info1 legend{
+    margin-bottom: 20px;
+}
+#age{
+    margin-bottom: 20px;
+}
+#nom{
+    width: 20%;
+}
+#ville{
+    width: 40%;
+}
+.info12{
+    display: flex;
+    justify-content: space-between;
+    gap: 1px;
+}
+.info3,.info2{
+    flex: 1;
+}
+.info2{
+   background-color: rgb(255,255,204);
+}
+.info3{
+background-color: rgb(51,153,204);
+}
+#graph{
+    font-size: 17px;
+}
+.buttons{
+    width: 100%;
+    height: 40px;
+    background-color: rgb(255,204,153);
+}
+.buttons button{
+
+    font-size: 20px;
+}
+#ok{
+    margin-left: 40%;
+}
