--- a/TP2/styleex3.css
+++ b/TP2/styleex3.css
@@ -23,3 +23,18 @@ body{
 #content input{
     margin: 10px;
 }
+#submit{
+    border: none;
+    font-size: 20px;
+    padding: 10px;
+    border-radius: 10px;
+    background-color: #2c3338;
+    color: white;
+
+}
+form{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
